<resources>
    <string name="app_name">NMA</string>
    <string name="action_settings">Settings</string>

    <string name="client_id">583870528080-6boujoiv295csb5i7us8qm5pcq40g3kk.apps.googleusercontent.com</string>
    <string name="facebook_app_id">342985273267053</string>
    <string name="welcome_nma">WELCOME NMA!</string>
    <string name="email_text">Email</string>
    <!-- Login screen -->
    <string name="events">EVENTS</string>
    <string name="blog">BLOG</string>
    <string name="job">JOB</string>
    <string name="about">ABOUT</string>
    <string name="contact">CONTACT</string>
    <string name="signup">SignUp</string>
    <string name="signin">SignIn</string>
    <string name="logout">LOGOUT</string>

    <string name="et_username">User Name</string>
    <string name="remember">Remember</string>
    <string name="forget_password">Forget Password?</string>
    <string name="connet_accounts">Or Connect With</string>
    <string name="btn_facebook">Connect with Facebook</string>
    <string name="btn_googleplus">Connect with Google+</string>
    <!-- Navigation drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="to_exit">Please press back again to exit</string>
    <string name="welcome">WELCOME TO NATIONAL MANAGEMENT ACADEMY</string>
    <string name="welcome_text">Welcome to Online Learning. You have taken important first step
    in your life by visiting this site.Choice your course and explore!</string>
    <string name="browse_course">BROWSE ALL COURSE</string>
    <string name="popular_course">POPULAR COURSE</string>
    <string name="upcoming_educational">Upcoming Educational Events for your future careerist.Join us now! </string>
    <string name="nma_news">NMA NEWS</string>
    <string name="view_all_event">VIEW ALL EVENTS</string>
    <string name="view_detail">အေသးစိတ္ၾကည့္ရန္</string>
    <string name="no_data">အခ်က္အလက္မ်ား မရ ေသးပါ</string>
    <string name="no_connection">no internet connection , please try again later</string>
    <string name="something_wrong">something wrong</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="fees">Fees</string>
    <string name="certificate">Certificate</string>
    <string name="attendance">Attendance</string>
    <string name="group_discussion">Group Discussion</string>
    <string name="group_presentation">Group Presentation</string>
    <string name="assignment">Assignment</string>
    <string name="exam">Exam</string>
    <string name="final_result">Final Result</string>
    <string name="current_course">Current Courses</string>
    <string name="history_course">History Courses</string>
    <string name="message">Message</string>
    <string name="mark">Mark</string>
    <string name="announcement">Announcement</string>
    <string name="current_course_detail">Current Courses Detail</string>
    <string name="history_course_detail">History Courses Detail</string>
    <string name="message_detail">Message Detail</string>
    <string name="mark_detail">Mark Detail</string>
    <string name="Announcement_detail">Announcement Detail</string>


    <string name="about_us_2"><![CDATA[
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
         eiusmod tempor incididunt ut labore et dolore magna aliqua.
         Ut enim ad minim veniam, quis nostrud exercitation ullamco
         laboris nisi ut aliquip ex ea commodo consequat. Duis aute
         irure dolor in reprehenderit in voluptate velit esse cillum
         dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
         non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    ]]></string>

    <string-array name="condition_spinner">
        <item>1း</item>
        <item>2း</item>
        <item>3</item>
    </string-array>
    <string-array name="hostel_design_english">
        <item>Hall</item>
        <item>Garrent</item>
        <item>Householder</item>
        <item>1 Person Room</item>
        <item>2 Persons Room</item>
        <item>3 Persons Room</item>
        <item>4 Persons Room</item>
        <item>5 Persons Room</item>
        <item>6 Persons Room</item>
        <item>7 Persons Room</item>
        <item>8 Persons Room</item>
        <item>9 Persons Room</item>
        <item>10 Persons Room</item>
        <item>11 Persons Room</item>
        <item>12 Persons Room</item>
        <item>13 Persons Room</item>
        <item>14 Persons Room</item>
        <item>15 Persons Room</item>
        <item>16 Persons Room</item>
        <item>17 Persons Room</item>
        <item>18 Persons Room</item>
        <item>19 Persons Room</item>
        <item>20 Persons Room</item>
    </string-array>

</resources>
