<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_event"
            android:title="@string/events"
            />
        <item
            android:id="@+id/navigation_blog"
            android:title="@string/blog"/>
        <item
            android:id="@+id/navigation_job"
            android:title="@string/job"/>
        <item
            android:id="@+id/navigation_about"
            android:title="@string/about"/>
        <item
            android:id="@+id/navigation_contact"
            android:title="@string/contact"/>
        <item
            android:id="@+id/navigation_logout"
            android:title="@string/logout"/>
    </group>


</menu>
